data/collection/fixes/descriptions/scala/scala-5576
Works in 2.9.1, fails in 2.10.0-M1

```scala
type Id[X] = X
trait Pointed[F[_]]
implicit val idInstance: Pointed[Id] = new Pointed[Id] {}
def point[F[_]: Pointed, A](a: A): F[A] = sys.error("")
def ambigram[F[_]: Pointed]: F[Int] = point(0)
```

The error:

```scala
<console>:15: error: ambiguous implicit values:
 both value idInstance in of type => Pointed[Id]
 and value evidence$2 of type Pointed[F]
 match expected type Pointed[F]
           point(0)
                ^
```